# PostQ

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/quant-scan-action/: action.yml
ci-templates/: azure-pipelines.yml  bitbucket-pipelines.yml  gitlab-ci.yml  jenkins.groovy
src/quant_scan/: __init__.py  __main__.py
src/quant_scan/analysis/: __init__.py  ast_analyzer.py
src/quant_scan/analysis/visitors/: __init__.py  python_crypto.py
src/quant_scan/cbom/: generator.py  models.py
src/quant_scan/cbom/formats/: cyclonedx.py
src/quant_scan/cicd/: __init__.py  pr_comment.py  quality_gate.py
src/quant_scan/cli/: app.py
src/quant_scan/comparison/: __init__.py  differ.py  models.py
src/quant_scan/compliance/: gap_analysis.py  mapper.py
src/quant_scan/compliance/frameworks/: anssi.py  bsi.py  cnss.py  dora.py  eidas.py  ens.py  eu_roadmap.py  gdpr.py  hipaa.py  iso27001.py  nis2.py  nist.py  pci_dss.py  soc2.py
src/quant_scan/config/: __init__.py  loader.py  profiles.py  schema.py
src/quant_scan/core/: context.py  engine.py  enums.py  event_bus.py  events.py  middleware.py  models.py
src/quant_scan/migration/: __init__.py  effort_estimator.py  models.py  planner.py  vendor_recommender.py
src/quant_scan/migration/data/: effort_matrix.yml  vendor_capabilities.yml
src/quant_scan/quantum_timeline/: __init__.py  hndl.py  models.py  predictor.py
src/quant_scan/quantum_timeline/data/: algorithm_thresholds.yml  quantum_progress.yml
src/quant_scan/reports/: branding.py  charts.py  generator.py  i18n.py  scoring.py
src/quant_scan/reports/formats/: console.py  html_report.py  json_report.py  pdf_report.py  sarif_report.py
src/quant_scan/reports/i18n_data/: en.yml  es.yml
src/quant_scan/rules/: loader.py  matcher.py
src/quant_scan/rules/data/: algorithms.yml
src/quant_scan/rules/data/source/: cpp.yml  csharp.yml  dart.yml  golang.yml  java.yml  javascript.yml  kotlin.yml  php.yml  python.yml  ruby.yml  rust.yml  scala.yml  swift.yml  typescript.yml
src/quant_scan/scanners/: base.py  context.py  registry.py
src/quant_scan/scanners/binary/: scanner.py
src/quant_scan/scanners/binary/analyzers/: entropy.py  strings.py  symbols.py
src/quant_scan/scanners/certificate/: cert_parser.py  scanner.py  tls_probe.py
src/quant_scan/scanners/config/: scanner.py
src/quant_scan/scanners/config/parsers/: ssh.py  tls_server.py
src/quant_scan/scanners/container/: scanner.py
src/quant_scan/scanners/container/analyzers/: dockerfile.py  kubernetes.py
src/quant_scan/scanners/dependency/: scanner.py
src/quant_scan/scanners/dependency/analyzers/: go_deps.py  java_deps.py  node_deps.py  python_deps.py
src/quant_scan/scanners/iac/: scanner.py
src/quant_scan/scanners/iac/parsers/: ansible.py  cloudformation.py  terraform.py
src/quant_scan/scanners/network/: cipher_classifier.py  scanner.py
src/quant_scan/scanners/network/probes/: dns_probe.py  ssh_probe.py  starttls_probe.py  tls_probe.py
src/quant_scan/scanners/secrets/: scanner.py
src/quant_scan/scanners/source/: scanner.py
src/quant_scan/scanners/source/languages/: __init__.py  base.py  cpp.py  csharp.py  dart.py  golang.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py  typescript.py
src/quant_scan/scoring/: __init__.py  crypto_debt.py  quantum_score.py
src/quant_scan/server/: app.py  config.py
src/quant_scan/server/api/v1/: __init__.py  projects.py  reports.py  scans.py
tests/: conftest.py
tests/fixtures/: Dockerfile.vulnerable  k8s-tls-secret.yaml  safe_python.py  sample.tf  sample_nginx.conf  sample_package.json  sample_requirements.txt  sample_ssh_config  vulnerable_cpp.cpp  vulnerable_csharp.cs  vulnerable_dart.dart  vulnerable_go.go  vulnerable_java.java  vulnerable_javascript.js  vulnerable_kotlin.kt  vulnerable_php.php  vulnerable_python.py  vulnerable_ruby.rb  vulnerable_rust.rs  vulnerable_scala.scala  vulnerable_swift.swift  vulnerable_typescript.ts
tests/integration/: test_cli.py  test_full_scan.py  test_full_scan_extended.py
tests/unit/: test_cbom.py  test_cicd.py  test_comparison.py  test_compliance_new.py  test_config.py  test_context_analyzer.py  test_engine.py  test_enums.py  test_gap_analysis.py  test_i18n.py  test_loader.py  test_matcher.py  test_migration.py  test_models.py  test_new_languages.py  test_quantum_timeline.py  test_scoring_advanced.py  test_source_languages.py
