[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-scan"
version = "0.1.0"
description = "Post-Quantum Cryptography Scanner — Detect quantum-vulnerable algorithms in code, certificates, configs, and dependencies"
readme = "PRD.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
    { name = "EYD Company", email = "info@eydcompany.com" },
]
keywords = ["pqc", "post-quantum", "cryptography", "scanner", "security", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
quant-scan = "quant_scan.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
